@@ -1368,7 +1368,7 @@ namespace System.Data {
 					}
 					
 					//Saving the current value as the column value
-					row[index] = targetColumn[row._current];
+					row [index] = targetColumn [IndexFromVersion (DataRowVersion.Default)];
 					
 				}
 			}
